--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>About</title>
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
+
 </head>
 <body>
 	<%- include('components/navbar')%>
-	<h1>Hello World! </h1>
+	<h1>About </h1>
 	<h2>Page About</h2>
 </body>
 </html>
