--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Home</title>
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
 	<%- include('components/navbar')%>
