--- a/views/pages/user/create.ejs
+++ b/views/pages/user/create.ejs
@@ -2,15 +2,26 @@
 <html>
 <head>
 	<title>User Create</title>
-	<link rel="stylesheet" type="text/css" href="assets/style.css">
+	<link rel="stylesheet" type="text/css" href="../assets/style.css">
 </head>
 <body>
 <%- include('../components/navbar')%>
-<a href="/users/create">Register</a>
-<h1>Daftar User</h1>
-<ul>
-	<li></li>
-</ul>
+<h1>Tambah User</h1>
+	<form action="/users" method="POST">
+		<div class="input-group">
+			<label>Name</label>
+			<input type="text" name="name">
+		</div>
+
+		<div class="input-group">
+			<label>Email</label>
+			<input type="text" name="email">
+		</div>
+
+		<button type="submit">Tambah</button>
+		<a href="/users">Kembali</a>
+	</form>
+
 <footer>
 	<p>&copy; 2021 Widi_arrohman</p>
 </footer>
