--- a/views/pages/user/create.ejs
+++ b/views/pages/user/create.ejs
@@ -18,6 +18,11 @@
 			<input type="text" name="email">
 		</div>
 
+		<div class="input-group">
+			<label>Password</label>
+			<input type="password" name="password">
+		</div>
+
 		<button type="submit">Tambah</button>
 		<a href="/users">Kembali</a>
 	</form>
