--- a/views/pages/user/show.ejs
+++ b/views/pages/user/show.ejs
@@ -9,9 +9,9 @@
 	<a href="/users">kembali</a>
 	<H1>User Detail</H1>
 	<ul>
-		<li>Id user : <%=user[0].id%></li>
-		<li>Name : <%=user[0].name%></li>
-		<li>Email : <%=user[0].email%></li>
+		<li>Id user : <%=user.id%></li>
+		<li>Name : <%=user.name%></li>
+		<li>Email : <%=user.email%></li>
 	</ul>
 </body>
 </html>
