query find (pencarian)
digunakan untuk mencari suatu data dengan form pencarian atau search

--- a/views/pages/user/index.ejs
+++ b/views/pages/user/index.ejs
@@ -8,6 +8,12 @@
 <%- include('../components/navbar')%>
 <a href="/users/create">Register</a>
 <h1>Daftar User (<%=users.length%>)</h1>
+
+<form action="/users">
+	<input type="text" name="keyword">
+	<button type="submit">Cari</button>
+</form>
+
 <ul>
 	<% if (users.length > 0) {%>
 		<% users.forEach(function(user) { %>
