--- a/views/pages/user/show.ejs
+++ b/views/pages/user/show.ejs
@@ -9,9 +9,16 @@
 	<a href="/users">kembali</a>
 	<H1>User Detail</H1>
 	<ul>
-		<li>Id user : <%=user.id%></li>
+		<li>Id user : <%=user._id%></li>
 		<li>Name : <%=user.name%></li>
 		<li>Email : <%=user.email%></li>
 	</ul>
+
+	<a href="/users/<%=user._id%>/edit">Edit</a>
+	<a href="/users/id">Delete</a>
+
+<footer>
+	<p>&copy; 2021 Widi_arrohman</p>
+</footer>
 </body>
 </html>
